# egile

./: BUTTON_FIX_COMPLETE.md  BUTTON_FIX_GUIDE.md  CLEANUP.md  INSTALL_MCP.md  QUICKSTART.md  README.md  REORGANIZE.md  SMART_AGENT_ARCHITECTURE.md  SMART_AGENT_STATUS.md  check_deps.py  check_orders.py  check_sales_data.py  debug_gaming_headset.py  debug_intent_customer.py  debug_microphone_mapping.py  debug_order.py  debug_product_search.py  debug_raw_mcp.py  debug_resources.py  debug_server.py  debug_stock_update.py  demo_laptop_order.py  demo_microphone_order.py  demo_smart_agent.py  direct_order_test.py  ecommerce.db  example_usage.py  final_debug_stock.py  final_microphone_demo.py  fix_stock_order.py  mcp-config.json  order_confirmation_demo.py  package.json  pyproject.toml  quick_customer_test.py  quick_test_method.py  run_agent_demo.py  run_chatbot.py  run_chatbot_enhanced.py  run_chatbot_simple.py  (+97 more)
chatbot/: README.md  app.js  bridge.py  index.html
chatbot-agent/: README.md  app.js  app_smart.js  bridge.py  ecommerce.db  element-test.html  grok_agent.py  index.html  smart_bridge.py  test.html
egile/: README.md  __init__.py  agent.py  cli.py  database.py  enhanced_mcp_tools.py  legacy_server_memory.py  legacy_server_sqlite.py  server_sqlite.py  smart_agent.py
