[project]
name = "egile"
version = "0.1.0"
description = ""
authors = [
    {name = "Jean-Baptiste Poullet",email = "jeanbaptistepoullet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp (>=1.9.3,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
isort = "^6.0.1"

